feat: miner and worker performance
